# rinha-backend-2023-rust-axum-sqlx

./: .env  .gitignore  Cargo.toml  DockerfileUbuntu  app-errors.txt  db-errors.txt  docker-compose.yml  init.sql  mysql.sql  nginx.conf  postgresql.conf  run.sh  todo.txt
.sqlx/: query-0ef0dee7be08b0cbc33629ad8d78073108ce4d89bb0cabacddd30266165149b5.json  query-210e12f82795f6b4997da7158749a2f13b1c12bc8412dec37a0aec6fe9410a52.json  query-6b25a6476cb6ce069f9e36f291c311c15a545d56784f63bac709fb17a2cb9068.json  query-a49dad7874bf22abde9b7aef020694e1b8aa328b4224f6f62726fff39b6125bf.json
src/: main.rs
