[package]
name = "rinha-backend-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"

